# solana-hack-oasis-finance

./: .gitignore  Cargo.toml  README.md  testAutocompountd.js
anchor/: .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/autocompound/: Cargo.toml  build_and_deploy.sh
anchor/programs/autocompound/src/: lib.rs
anchor/programs/new-vault/: Cargo.toml  build_and_deploy.sh
anchor/programs/new-vault/src/: lib.rs  userinfo.rs
anchor/programs/raydium-test/: Cargo.toml
anchor/programs/swap/: Cargo.toml  build_and_deploy.sh
anchor/programs/swap/src/: lib.rs
anchor/programs/vault/: Cargo.toml
anchor/tests/: autocompound.js  newVault.js  raydium.js  vault.js
client/: package.json
client/public/: index.html
client/src/: App.tsx  index.css  index.tsx
client/src/container/: index.module.css  index.tsx  token-provider.tsx
client/src/models/: account.ts  borsh.ts  index.tsx  pool.ts
client/src/store/: account.tsx  connection.tsx  currentPair.tsx  farm.ts  liquidity.ts  pool.tsx  price.ts  wallet.new.tsx  wallet.tsx
client/src/utils/: farms.ts  idl.json  ids.ts  layouts.ts  liquidity.ts  market.ts  notification.tsx  pools.ts  ray.js  ray.json  raydium.ts  safe-math.ts  stake.old.ts  stake.ts  swap.ts  token-list.json  tokens.ts  transaction.ts  utils.ts  vault.js  vault.ts  wallet.ts  web3.ts
client/src/wallet/: types.ts
src/: instruction.rs  lib.rs  processor.rs  ray.rs  state.rs
src/client/: market.js  token.js  transaction.js
swap/: main.js
swap/spl/src/: dex.rs
swap/src/client/: swap.js  utils.js
(+30 files in other folders)
