[package]
name = "swap"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.6.9"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
anchor-lang = "0.7.0"
anchor-spl = "0.7.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"